@@ -1,2 +1,0 @@
-#include <config.h>
-#define S63_GRUB_VERSION VERSION 
